# eclaw

cpp/: CMakeLists.txt  readme.md  vcpkg.json
cpp/src/: config.cpp  config.h  container_runner.cpp  container_runner.h  container_runtime.cpp  container_runtime.h  db.cpp  db.h  env.cpp  env.h  group_folder.cpp  group_folder.h  group_queue.cpp  group_queue.h  ipc.cpp  ipc.h  logger.h  main.cpp  mount_security.cpp  mount_security.h  platform.cpp  platform.h  remote_control.cpp  remote_control.h  router.cpp  router.h  sender_allowlist.cpp  sender_allowlist.h  task_scheduler.cpp  task_scheduler.h  timezone.cpp  timezone.h  types.h
cpp/src/channels/: registry.cpp  registry.h
